--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             spellcheck="false">
             
 
-            <button><img src="/images/search.png" alt=""></button>
+            <button><img src="./images/search.png" alt=""></button>
         </div>
         
         <div class="error">
