--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
         <div class="details">
             <div class="col">
-                <img src="/images/humidity.png">
+                <img src="./images/humidity.png">
                 <div>
                     <p class="humidity">50%</p>
                     <p>Humidity</p>
                 </div>
             </div>
             <div class="col">
-                <img src="/images/wind.png">
+                <img src="./images/wind.png">
                 <div>
                     <p class="wind">15 km/h</p>
                     <p>Wind Speed</p>
